--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,8 +49,7 @@ jobs:
     - name: Run tests with coverage
       run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
       
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
       with:
-        file: ./coverage.txt
-        fail_ci_if_error: false
+        token: ${{ secrets.CODECOV_TOKEN }}
